SVN
-------------------------------

XML:   Resolved issue CASTOR-1758 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Complete facet handling for numerical types
       Details: http://jira.codehaus.org/browse/CASTOR-1758
       (Edward - 20061223)


Version 1.1-M1, Dec 23, 2006
-------------------------------

XML:   Resolved issue CASTOR-1756 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based cleanup in builder/types
       Details: http://jira.codehaus.org/browse/CASTOR-1756
       (Edward - 20061222)

XML:   Resolved issue CASTOR-1755 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Complete (to first pass) the test for all date/time types
       Details: http://jira.codehaus.org/browse/CASTOR-1755
       (Edward - 20061222)

XML:   Resolved issue CASTOR-1748 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed state pool in UnmarshalHandler.
       Details: http://jira.codehaus.org/browse/CASTOR-1748
       (Werner - 20061222)

Doc:   Resolved issue CASTOR-1752 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update xmlschema.xml srcgen documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1752
       (Edward - 20061222)

Doc:   Resolved issue CASTOR-1751 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup/update of srcgen/test documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1751
       (Edward - 20061221)

Doc:   Resolved issue CASTOR-1750 using contribution from Edward Kuns [edward.kuns@aspect.com]
       General cleanup of several documentation files
       Details: http://jira.codehaus.org/browse/CASTOR-1750
       (Edward - 20061221)

All:   Resolved issue CASTOR-1749 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update comments in castor.properties
       Details: http://jira.codehaus.org/browse/CASTOR-1749
       (Edward - 20061221)
