@@ -1,11 +1,15 @@
-SVN
+Version (SVN)
 -------------------------------
+
+XML:   Resolved issue CASTOR-1761 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Java 5 breaks BigDecimal validation
+       Details: http://jira.codehaus.org/browse/CASTOR-1761
+       (Edward - 20061223)
 
 XML:   Resolved issue CASTOR-1758 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Complete facet handling for numerical types
        Details: http://jira.codehaus.org/browse/CASTOR-1758
        (Edward - 20061223)
-
 
 Version 1.1-M1, Dec 23, 2006
 -------------------------------
